--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: plumbplumb
-Title: What the Package Does (One Line, Title Case)
+Title: Faster iteration with plumber
 Version: 0.0.0.9000
 Authors@R: 
     person(given = "Irene",
            family = "Steves",
            role = c("aut", "cre"),
            email = "email@email.com")
-Description: What the package does (one paragraph).
+Description: Iterate more quickly with plumber by testing it in a new terminal window.
 License: What license it uses
 Encoding: UTF-8
 LazyData: true
@@ -15,3 +15,5 @@ Imports: glue,
     rlang,
     rstudioapi
 RoxygenNote: 6.1.0
+URL: https://github.com/isteves/plumbplumb
+BugReports: https://github.com/isteves/plumbplumb/issues
