--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,3 +17,5 @@ Imports: glue,
 RoxygenNote: 6.1.0
 URL: https://github.com/isteves/plumbplumb
 BugReports: https://github.com/isteves/plumbplumb/issues
+Suggests: 
+    testthat
